packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__cannot_use_access_control_with_access_control_dar.snap
---
source: src/tests/test_with_components.rs
assertion_line: 412
expression: result
---
TokenStream:

None

Diagnostics:

====
Error: Only one AccessControl component can be used. Found: [AccessControl, AccessControlDefaultAdminRules].
====

AuxData:

None
