packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__cannot_use_erc721_consecutive_with_manual_erc721_enumerable.snap
---
source: src/tests/test_with_components.rs
assertion_line: 1088
expression: result
---
TokenStream:

None

Diagnostics:

====
Error: ERC721Enumerable and ERC721Consecutive interfere with each other in token ownership tracking and should not be used together.
====

AuxData:

None
