packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_access_control.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod Contract {
    use openzeppelin_access::accesscontrol::DEFAULT_ADMIN_ROLE;
    use starknet::ContractAddress;

    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        accesscontrol: AccessControlComponent::Storage,
    }

    #[constructor]
    fn constructor(ref self: ContractState, default_admin: ContractAddress) {
        self.accesscontrol.initializer();

        self.accesscontrol._grant_role(DEFAULT_ADMIN_ROLE, default_admin);
    }

    use openzeppelin_access::accesscontrol::AccessControlComponent;

    component!(path: AccessControlComponent, storage: accesscontrol, event: AccessControlEvent);

    impl AccessControlInternalImpl = AccessControlComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        AccessControlEvent: AccessControlComponent::Event,
    }
}


Diagnostics:

None

AuxData:

None
