packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_access_control_default_admin_rules_no_initializer.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod Contract {
    use openzeppelin_access::accesscontrol::extensions::DefaultConfig;
    use starknet::ContractAddress;

    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub access_control_dar: AccessControlDefaultAdminRulesComponent::Storage,
    }

    #[constructor]
    fn constructor(ref self: ContractState, default_admin: ContractAddress) {}
    use openzeppelin_access::accesscontrol::extensions::AccessControlDefaultAdminRulesComponent;

    component!(
        path: AccessControlDefaultAdminRulesComponent,
        storage: access_control_dar,
        event: AccessControlDefaultAdminRulesEvent,
    );

    impl AccessControlDefaultAdminRulesInternalImpl =
        AccessControlDefaultAdminRulesComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        AccessControlDefaultAdminRulesEvent: AccessControlDefaultAdminRulesComponent::Event,
    }
}


Diagnostics:

====
Warning: It looks like the initializers for the following components are missing:

AccessControlDefaultAdminRules

This may lead to unexpected behavior.
We recommend adding the corresponding initializer calls to the constructor.
====

AuxData:

None
