packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_account_no_initializer.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub account: AccountComponent::Storage,
    }

    use openzeppelin_account::AccountComponent;

    component!(path: AccountComponent, storage: account, event: AccountEvent);

    impl AccountInternalImpl = AccountComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        AccountEvent: AccountComponent::Event,
    }
}


Diagnostics:

====
Warning: It looks like the initializers for the following components are missing:

Account

This may lead to unexpected behavior. We recommend adding the corresponding initializer calls to the constructor.
====

AuxData:

None
