packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_component_used_twice.snap
---
source: src/tests/test_with_components.rs
assertion_line: 1668
expression: result
---
TokenStream:

None

Diagnostics:

====
Error: Component Ownable is specified multiple times. Each component must only be listed once.
====

AuxData:

None
